# serde_webgpu

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  mat.rs  vec.rs
tests/: base.rs
